--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <title>Introduction To JavaScript</title>
 </head>
 <body>
-    <h1>Hello Chinnawat</h1>
-    <p>เลขของคุณ คือ</p>
+    <h1>โปรแกรมลอตโตลี่</h1>
     <p id="your_number"></p>
-    <p>เลขที่ถูกรางวัล คือ</p>
-    <p id="result"></p>
+    <b id="result"></b>
     <p id="note"></p>
     <script src="app.js"></script>
 </body>
